--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/superwo/node-course#readme",
   "devDependencies": {
     "nodemon": "^1.19.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.0"
   }
 }
