--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/superwo/node-course.git"
   },
+  "nodemonConfig": {        
+    "ignore": ["data/products.json"]  
+  },
   "author": "Radu",
   "license": "ISC",
   "bugs": {
