--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "type": "git",
     "url": "git+https://github.com/superwo/node-course.git"
   },
-  "nodemonConfig": {        
-    "ignore": ["data/products.json", "data/cart.json"]  
+  "nodemonConfig": {
+    "ignore": [
+      "data/products.json",
+      "data/cart.json"
+    ]
   },
   "author": "Radu",
   "license": "ISC",
@@ -27,6 +30,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "mongodb": "^3.2.6"
   }
 }
